Introduce CyberOS-specific changes.

--- a/doc/cyberstrap.8.asciidoc
+++ b/doc/cyberstrap.8.asciidoc
@@ -1,17 +1,17 @@
-pacstrap(8)
+cyberstrap(8)
 ===========
 
 Name
 ----
-pacstrap - install packages to the specified new root directory
+cyberstrap - install packages to the specified new root directory
 
 Synopsis
 --------
-pacstrap [options] root [packages...]
+cyberstrap [options] root [packages...]
 
 Description
 -----------
-pacstrap is designed to create a new system installation from scratch. The
+cyberstrap is designed to create a new system installation from scratch. The
 specified packages will be installed into a given directory after setting up
 some basic mountpoints. By default, the host system's pacman signing keys
 and mirrorlist will be used to seed the chroot.
@@ -30,6 +30,9 @@ Options
 
 *-G*::
 	Avoid copying the host's pacman keyring to the target.
+
+*-p*::
+	Avoid copying the host's pacman config to the target.
 
 *-i*::
 	Prompt for package confirmation when needed (run interactively).
